Day9(0124) progress update

--- a/config/content.htm
+++ b/config/content.htm
@@ -303,6 +303,18 @@ Hello World!!!</pre>
 <p><span></span>得到上列字串後，若需進行計算則需使用內建的eval()將字串轉換為數值。</p>
 <p>使用上述函式寫出利用輸入半徑，用來計算圓面積的程式，如下。</p>
 <p><a href="https://drive.google.com/file/d/1CqWMW5cUgcQtZOCpCD51S5JBJLnVHr52/view?usp=sharing" title="CircleArea.py">CircleArea.py</a></p>
-<p></p>
+<h2>Day9(0124)</h2>
+<h3>常用內建數值函數</h3>
+<p>abs(X):傳回X的絕對值。</p>
+<p>min(X1,X2,X3,......)<span>:傳回參數數值中的最小值。</span></p>
+<p>max(<span>X1,X2,X3,......</span>)<span>:傳回參數數值中的最大值。</span></p>
+<p>hex(<span>X</span>)<span>:傳回整數X參數由十進位轉為十六進位的字串，前面會加上0x。</span></p>
+<p>oct(<span>X</span>)<span>:傳回整數X參數由十進位轉為八進位的字串，前面會加上0o。</span></p>
+<p>bin(<span>X</span>)<span>:傳回整數X參數由十進位轉為二進位的字串<span>，前面會加上0b。</span></span></p>
+<p>int(<span>X</span>)<span>:傳回X的整數部分，小數將被直接捨去。</span></p>
+<p>round(<span>X,precision</span>)<span>:傳回與X最接近的整數(四捨五入)，若要設定精確度到小數點後幾位，可利用選擇性參數precision設定。</span></p>
+<p>pow(<span>X,Y</span>)<span>:傳回X的Y次方值。</span></p>
+<p>float("<span>X</span>)<span>:傳回字串X轉換成浮點數的結果。</span></p>
+<p>complex(<span>X</span>)<span>:傳回字串X轉換成複數的結果。</span></p>
 <h1>資料參考</h1>
 <p><a href="https://developer.mozilla.org/zh-TW/docs/Learn/Getting_started_with_the_web&amp;nbsp">https://developer.mozilla.org/zh-TW/docs/Learn/Getting_started_with_the_web&amp;nbsp</a> </p>
