--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -301,5 +301,8 @@ Hello World!!!</pre>
 '40823131'
 &gt;&gt;&gt;</pre>
 <p><span></span>得到上列字串後，若需進行計算則需使用內建的eval()將字串轉換為數值。</p>
+<p>使用上述函式寫出利用輸入半徑，用來計算圓面積的程式，如下。</p>
+<p><a href="https://drive.google.com/file/d/1CqWMW5cUgcQtZOCpCD51S5JBJLnVHr52/view?usp=sharing" title="CircleArea.py">CircleArea.py</a></p>
+<p></p>
 <h1>資料參考</h1>
 <p><a href="https://developer.mozilla.org/zh-TW/docs/Learn/Getting_started_with_the_web&amp;nbsp">https://developer.mozilla.org/zh-TW/docs/Learn/Getting_started_with_the_web&amp;nbsp</a> </p>
