--- a/content/輸入.html
+++ b/content/輸入.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='W1.html'>W1</a><ul class='dropdown'><li class='has-children'><a href='Day1(0116).html'>Day1(0116)</a><ul class='dropdown'><li><a href='Python源起.html'>Python源起</a><li><a href='基本Python程式.html'>基本Python程式</a><li><a href='Python程式碼格式重點.html'>Python程式碼格式重點</a><li><a href='常見程式設計錯誤(bug).html'>常見程式設計錯誤(bug)</a></li></ul><li class='has-children'><a href='Day2(0117).html'>Day2(0117)</a><ul class='dropdown'><li><a href='型別.html'>型別</a></li></ul><li class='has-children'><a href='Day3(0118).html'>Day3(0118)</a><ul class='dropdown'><li><a href='變數.html'>變數</a></li></ul><li class='has-children'><a href='Day4(0119).html'>Day4(0119)</a><ul class='dropdown'><li><a href='常數.html'>常數</a><li><a href='運算子.html'>運算子</a></li></ul><li class='has-children'><a href='Day5(0120).html'>Day5(0120)</a><ul class='dropdown'><li><a href='運算子個別解說(一).html'>運算子個別解說(一)</a></li></ul><li class='has-children'><a href='Day6(0121).html'>Day6(0121)</a><ul class='dropdown'><li><a href='運算子個別解說(二).html'>運算子個別解說(二)</a></li></ul><li class='has-children'><a href='Day7(0122).html'>Day7(0122)</a><ul class='dropdown'><li><a href='運算子的優先順序.html'>運算子的優先順序</a><li><a href='輸出.html'>輸出</a></li></li></ul></ul><li class='has-children'><a href='W2.html'>W2</a><ul class='dropdown'><li class='has-children'><a href='Day8(0123).html'>Day8(0123)</a><ul class='dropdown'><li><a href='輸入.html'>輸入</a></li></li></ul></ul><li><a href='資料參考.html'>資料參考</a></li>
+                     <li class='has-children'><a href='W1.html'>W1</a><ul class='dropdown'><li class='has-children'><a href='Day1(0116).html'>Day1(0116)</a><ul class='dropdown'><li><a href='Python源起.html'>Python源起</a><li><a href='基本Python程式.html'>基本Python程式</a><li><a href='Python程式碼格式重點.html'>Python程式碼格式重點</a><li><a href='常見程式設計錯誤(bug).html'>常見程式設計錯誤(bug)</a></li></ul><li class='has-children'><a href='Day2(0117).html'>Day2(0117)</a><ul class='dropdown'><li><a href='型別.html'>型別</a></li></ul><li class='has-children'><a href='Day3(0118).html'>Day3(0118)</a><ul class='dropdown'><li><a href='變數.html'>變數</a></li></ul><li class='has-children'><a href='Day4(0119).html'>Day4(0119)</a><ul class='dropdown'><li><a href='常數.html'>常數</a><li><a href='運算子.html'>運算子</a></li></ul><li class='has-children'><a href='Day5(0120).html'>Day5(0120)</a><ul class='dropdown'><li><a href='運算子個別解說(一).html'>運算子個別解說(一)</a></li></ul><li class='has-children'><a href='Day6(0121).html'>Day6(0121)</a><ul class='dropdown'><li><a href='運算子個別解說(二).html'>運算子個別解說(二)</a></li></ul><li class='has-children'><a href='Day7(0122).html'>Day7(0122)</a><ul class='dropdown'><li><a href='運算子的優先順序.html'>運算子的優先順序</a><li><a href='輸出.html'>輸出</a></li></li></ul></ul><li class='has-children'><a href='W2.html'>W2</a><ul class='dropdown'><li class='has-children'><a href='Day8(0123).html'>Day8(0123)</a><ul class='dropdown'><li><a href='輸入.html'>輸入</a></li></ul><li class='has-children'><a href='Day9(0124).html'>Day9(0124)</a><ul class='dropdown'><li><a href='常用內建數值函數.html'>常用內建數值函數</a></li></li></ul></ul><li><a href='資料參考.html'>資料參考</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,7 +133,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Day8(0123) << <a href='Day8(0123).html'>Previous</a> <a href='資料參考.html'>Next</a> >> 資料參考<br /><h1>輸入</h1>
+    <div id="tipue_search_content">Day8(0123) << <a href='Day8(0123).html'>Previous</a> <a href='Day9(0124).html'>Next</a> >> Day9(0124)<br /><h1>輸入</h1>
 <p><span>使用內建的input()函式取得輸入的資料</span></p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&gt;&gt;&gt;userNumber = input("請輸入學號:")
 請輸入學號: 40823131
@@ -147,8 +147,7 @@ img.add_border {
 <p><span></span>得到上列字串後，若需進行計算則需使用內建的eval()將字串轉換為數值。</p>
 <p>使用上述函式寫出利用輸入半徑，用來計算圓面積的程式，如下。</p>
 <p><a href="https://drive.google.com/file/d/1CqWMW5cUgcQtZOCpCD51S5JBJLnVHr52/view?usp=sharing" title="CircleArea.py">CircleArea.py</a></p>
-<p></p>
-<br />Day8(0123) << <a href='Day8(0123).html'>Previous</a> <a href='資料參考.html'>Next</a> >> 資料參考</div>
+<br />Day8(0123) << <a href='Day8(0123).html'>Previous</a> <a href='Day9(0124).html'>Next</a> >> Day9(0124)</div>
         
     <!-- footer -->
       <div class="container">
