--- a/content/Day10(0125).html
+++ b/content/Day10(0125).html
@@ -133,15 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Python源起 << <a href='Python源起.html'>Previous</a> <a href='Python程式碼格式重點.html'>Next</a> >> Python程式碼格式重點<br /><h1>基本Python程式</h1>
-<p><span>🔽</span>利用下載好的Python IDLE編輯及儲存程式，可存為Python的專用.py檔。</p>
-<p><img alt="" height="596" src="./../images/IDLE.png" width="579"/></p>
-<p>1.Hello World!!</p>
-<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">print("Hello World!!")</pre>
-<p>2.基礎四則運算</p>
-<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">print(5-3+2)
-print(5*3/5)</pre>
-<br />Python源起 << <a href='Python源起.html'>Previous</a> <a href='Python程式碼格式重點.html'>Next</a> >> Python程式碼格式重點</div>
+    <div id="tipue_search_content">常用內建數值函數 << <a href='常用內建數值函數.html'>Previous</a> <a href='導入數學模組.html'>Next</a> >> 導入數學模組<br /><h1>Day10(0125)</h1>
+<br />常用內建數值函數 << <a href='常用內建數值函數.html'>Previous</a> <a href='導入數學模組.html'>Next</a> >> 導入數學模組</div>
         
     <!-- footer -->
       <div class="container">
