--- a/content/亂數函式.html
+++ b/content/亂數函式.html
@@ -133,15 +133,15 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Python源起 << <a href='Python源起.html'>Previous</a> <a href='Python程式碼格式重點.html'>Next</a> >> Python程式碼格式重點<br /><h1>基本Python程式</h1>
-<p><span>🔽</span>利用下載好的Python IDLE編輯及儲存程式，可存為Python的專用.py檔。</p>
-<p><img alt="" height="596" src="./../images/IDLE.png" width="579"/></p>
-<p>1.Hello World!!</p>
-<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">print("Hello World!!")</pre>
-<p>2.基礎四則運算</p>
-<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">print(5-3+2)
-print(5*3/5)</pre>
-<br />Python源起 << <a href='Python源起.html'>Previous</a> <a href='Python程式碼格式重點.html'>Next</a> >> Python程式碼格式重點</div>
+    <div id="tipue_search_content">常用數學函式 << <a href='常用數學函式.html'>Previous</a> <a href='資料參考.html'>Next</a> >> 資料參考<br /><h1>亂數函式</h1>
+<p>首先匯入亂數模組。</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&gt;&gt;&gt;import random</pre>
+<p>1.random.randint(X,Y):傳回一個大於等於X並小於等於Y的隨機整數。</p>
+<p>2.<span>random.random():傳回一個大於等於0.0並小於1.0的隨機浮點數。</span></p>
+<p><span>3.random.shuffle(X):將X中的元素進行隨機重排。</span></p>
+<p><span>利用上述函式寫出簡易猜數字的程式如下。</span></p>
+<p><span><a href="https://drive.google.com/file/d/1mG8VUXCxXKMNmqUnpQUgDG3gx7UR2B2M/view?usp=sharing">random.py</a></span></p>
+<br />常用數學函式 << <a href='常用數學函式.html'>Previous</a> <a href='資料參考.html'>Next</a> >> 資料參考</div>
         
     <!-- footer -->
       <div class="container">
