Day11(0126) progress update

--- a/content/索引運算子[]與片段運算子.html
+++ b/content/索引運算子[]與片段運算子.html
@@ -133,11 +133,17 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Day1(0116) << <a href='Day1(0116).html'>Previous</a> <a href='基本Python程式.html'>Next</a> >> 基本Python程式<br /><h1>Python源起</h1>
-<p>Python是一種程式語言，起源於1990年代初期由Guido van Rossum所研發，最初的想法為傳承ABC程式語言，Guido認為ABC相當優美與強大，非專業的程式設計人員也能夠使用，而ABC程式語言當初因為非開放而導致沒有獲得廣泛的運用，於是他決定以開放策略研發Python。</p>
-<p><img alt="" height="244" src="./../images/icon-python-text-color-horz.png" width="580"/></p>
-<p><span>🔼</span>Python 英文原意為蟒蛇，也可發現LOGO由兩隻蟒蛇組成。</p>
-<br />Day1(0116) << <a href='Day1(0116).html'>Previous</a> <a href='基本Python程式.html'>Next</a> >> 基本Python程式</div>
+    <div id="tipue_search_content">in ,not in運算子 << <a href='in ,not in運算子.html'>Previous</a> <a href='資料參考.html'>Next</a> >> 資料參考<br /><h1>索引運算子[]與片段運算子</h1>
+<p>利用索引運算子[]可以取得字串中的字元，如下。</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&gt;&gt;&gt;s = "Python程式設計"
+&gt;&gt;&gt;s[3]
+h</pre>
+<p>也可使用片段運算子來指定範圍索引，如下。</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&gt;&gt;&gt;s = "Python程式設計"
+&gt;&gt;&gt;s[2:4] #不包含第四字元(只索引2~3字元)
+th</pre>
+<p></p>
+<br />in ,not in運算子 << <a href='in ,not in運算子.html'>Previous</a> <a href='資料參考.html'>Next</a> >> 資料參考</div>
         
     <!-- footer -->
       <div class="container">
