--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -343,5 +343,108 @@ Hello World!!!</pre>
 <p><span>3.random.shuffle(X):將X中的元素進行隨機重排。</span></p>
 <p><span>利用上述函式寫出簡易猜數字的程式如下。</span></p>
 <p><span><a href="https://drive.google.com/file/d/1mG8VUXCxXKMNmqUnpQUgDG3gx7UR2B2M/view?usp=sharing">random.py</a></span></p>
+<h2><span>Day11(0126)</span></h2>
+<h3><span>逸脫序列</span></h3>
+<p><span></span>對於一些無法顯示在螢幕上的符號，可以利用<span>逸脫序列在這些符號前加上反斜線(\)，便能顯示出來。</span></p>
+<table style="width: 524px;">
+<tbody>
+<tr style="height: 15px;">
+<td style="width: 105.6px; height: 15px;">逸脫序列</td>
+<td style="width: 403.4px; height: 15px;">意義</td>
+</tr>
+<tr style="height: 14px;">
+<td style="width: 105.6px; height: 14px;">\\</td>
+<td style="width: 403.4px; height: 14px;">印出反斜線(\)。</td>
+</tr>
+<tr style="height: 14px;">
+<td style="width: 105.6px; height: 14px;">\'</td>
+<td style="width: 403.4px; height: 14px;"><span>印出單引號(')。</span></td>
+</tr>
+<tr style="height: 14px;">
+<td style="width: 105.6px; height: 14px;">\"</td>
+<td style="width: 403.4px; height: 14px;"><span>印出雙引號(")。</span></td>
+</tr>
+<tr style="height: 14px;">
+<td style="width: 105.6px; height: 14px;">\a</td>
+<td style="width: 403.4px; height: 14px;"><span>響鈴(Bell)。</span></td>
+</tr>
+<tr style="height: 14px;">
+<td style="width: 105.6px; height: 14px;">\b</td>
+<td style="width: 403.4px; height: 14px;"><span>倒退鍵(Backspace)。</span></td>
+</tr>
+<tr style="height: 14px;">
+<td style="width: 105.6px; height: 14px;">\f</td>
+<td style="width: 403.4px; height: 14px;"><span>換頁(Formfeed)。</span></td>
+</tr>
+<tr style="height: 14px;">
+<td style="width: 105.6px; height: 14px;">\n</td>
+<td style="width: 403.4px; height: 14px;"><span>換行(Linefeed)。</span></td>
+</tr>
+<tr style="height: 14px;">
+<td style="width: 105.6px; height: 14px;">\r</td>
+<td style="width: 403.4px; height: 14px;">歸位(Carriage Return)。</td>
+</tr>
+<tr style="height: 14px;">
+<td style="width: 105.6px; height: 14px;">\t</td>
+<td style="width: 403.4px; height: 14px;"><span>[Tab]鍵(Horizontal)。</span></td>
+</tr>
+<tr style="height: 14.3998px;">
+<td style="width: 105.6px; height: 14.3998px;">\v</td>
+<td style="width: 403.4px; height: 14.3998px;"><span>垂直定位(Vertical Tab)。</span></td>
+</tr>
+<tr style="height: 14px;">
+<td style="width: 105.6px; height: 14px;">\ooo</td>
+<td style="width: 403.4px; height: 14px;"><span>ASCII字元，ooo為八進位整數。</span></td>
+</tr>
+<tr style="height: 14px;">
+<td style="width: 105.6px; height: 14px;">\x<em><strong>hh</strong></em></td>
+<td style="width: 403.4px; height: 14px;"><span>ASCII字元，<em><strong>hh</strong></em>為十六進位整數。</span></td>
+</tr>
+<tr style="height: 14px;">
+<td style="width: 105.6px; height: 14px;">\N{<em><strong>name</strong></em>}</td>
+<td style="width: 403.4px; height: 14px;"><span>Unicode字元，<em><strong>name</strong></em>為字元名稱。</span></td>
+</tr>
+<tr style="height: 14px;">
+<td style="width: 105.6px; height: 14px;">\u<em><strong>xxxx</strong></em></td>
+<td style="width: 403.4px; height: 14px;"><span>Unicode字元，<em><strong>xxxx</strong></em>為16-bit十六進位整數。</span></td>
+</tr>
+<tr style="height: 14px;">
+<td style="width: 105.6px; height: 14px;">\U<em><strong>xxxxxxxx</strong></em></td>
+<td style="width: 403.4px; height: 14px;"><span>Unicode字元，<em><strong>xxxxxxxx</strong></em>為32-bit十六進位整數。</span></td>
+</tr>
+</tbody>
+</table>
+<h3>常用內建字串函式</h3>
+<p>1.len(x):傳回s字串的長度，也就是s總共包含幾個字元，例如:</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&gt;&gt;&gt;len("hello")
+5     #hello總共由5個字元組成</pre>
+<p>2.str(n):傳回數值參數n轉為字串的結果，例如:</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&gt;&gt;&gt;str(125.5)
+'125.5'</pre>
+<h3>連接運算子</h3>
+<p>1.+運算子可用來將字串串起來，如下。</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&gt;&gt;&gt;"我為"+"人人"+"，"+"人人"+"為我"+"。"
+我為人人，人人為我。</pre>
+<h3>重複運算子</h3>
+<p>1.*運算子可以用來重複字串，如下。</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&gt;&gt;&gt;5 * "wow!"
+'wow!wow!wow!wow!wow!'</pre>
+<h3>in ,not in運算子</h3>
+<p>1.in運算子:可以利用它來檢查字串中是否有我們指定的字串在其中，如下。</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&gt;&gt;&gt;"go" in "good"
+True</pre>
+<p><span>2.not in運算子:與in運算子相反，可以利用它來檢查字串中是否沒有我們指定的字串在其中，如下。</span></p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&gt;&gt;&gt;"go" not in "good"
+False</pre>
+<h3>索引運算子[]與片段運算子</h3>
+<p>利用索引運算子[]可以取得字串中的字元，如下。</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&gt;&gt;&gt;s = "Python程式設計"
+&gt;&gt;&gt;s[3]
+h</pre>
+<p>也可使用片段運算子來指定範圍索引，如下。</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&gt;&gt;&gt;s = "Python程式設計"
+&gt;&gt;&gt;s[2:4] #不包含第四字元(只索引2~3字元)
+th</pre>
+<p></p>
 <h1>資料參考</h1>
 <p><a href="https://developer.mozilla.org/zh-TW/docs/Learn/Getting_started_with_the_web&amp;nbsp">https://developer.mozilla.org/zh-TW/docs/Learn/Getting_started_with_the_web&amp;nbsp</a> </p>
