--- a/content/in ,not in運算子.html
+++ b/content/in ,not in運算子.html
@@ -133,11 +133,14 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Day1(0116) << <a href='Day1(0116).html'>Previous</a> <a href='基本Python程式.html'>Next</a> >> 基本Python程式<br /><h1>Python源起</h1>
-<p>Python是一種程式語言，起源於1990年代初期由Guido van Rossum所研發，最初的想法為傳承ABC程式語言，Guido認為ABC相當優美與強大，非專業的程式設計人員也能夠使用，而ABC程式語言當初因為非開放而導致沒有獲得廣泛的運用，於是他決定以開放策略研發Python。</p>
-<p><img alt="" height="244" src="./../images/icon-python-text-color-horz.png" width="580"/></p>
-<p><span>🔼</span>Python 英文原意為蟒蛇，也可發現LOGO由兩隻蟒蛇組成。</p>
-<br />Day1(0116) << <a href='Day1(0116).html'>Previous</a> <a href='基本Python程式.html'>Next</a> >> 基本Python程式</div>
+    <div id="tipue_search_content">重複運算子 << <a href='重複運算子.html'>Previous</a> <a href='索引運算子[]與片段運算子.html'>Next</a> >> 索引運算子[]與片段運算子<br /><h1>in ,not in運算子</h1>
+<p>1.in運算子:可以利用它來檢查字串中是否有我們指定的字串在其中，如下。</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&gt;&gt;&gt;"go" in "good"
+True</pre>
+<p><span>2.not in運算子:與in運算子相反，可以利用它來檢查字串中是否沒有我們指定的字串在其中，如下。</span></p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&gt;&gt;&gt;"go" not in "good"
+False</pre>
+<br />重複運算子 << <a href='重複運算子.html'>Previous</a> <a href='索引運算子[]與片段運算子.html'>Next</a> >> 索引運算子[]與片段運算子</div>
         
     <!-- footer -->
       <div class="container">
