--- a/content/逸脫序列.html
+++ b/content/逸脫序列.html
@@ -133,11 +133,77 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Day1(0116) << <a href='Day1(0116).html'>Previous</a> <a href='基本Python程式.html'>Next</a> >> 基本Python程式<br /><h1>Python源起</h1>
-<p>Python是一種程式語言，起源於1990年代初期由Guido van Rossum所研發，最初的想法為傳承ABC程式語言，Guido認為ABC相當優美與強大，非專業的程式設計人員也能夠使用，而ABC程式語言當初因為非開放而導致沒有獲得廣泛的運用，於是他決定以開放策略研發Python。</p>
-<p><img alt="" height="244" src="./../images/icon-python-text-color-horz.png" width="580"/></p>
-<p><span>🔼</span>Python 英文原意為蟒蛇，也可發現LOGO由兩隻蟒蛇組成。</p>
-<br />Day1(0116) << <a href='Day1(0116).html'>Previous</a> <a href='基本Python程式.html'>Next</a> >> 基本Python程式</div>
+    <div id="tipue_search_content">Day11(0126) << <a href='Day11(0126).html'>Previous</a> <a href='常用內建字串函式.html'>Next</a> >> 常用內建字串函式<br /><h1>逸脫序列</h1>
+<p><span></span>對於一些無法顯示在螢幕上的符號，可以利用<span>逸脫序列在這些符號前加上反斜線(\)，便能顯示出來。</span></p>
+<table style="width: 524px;">
+<tbody>
+<tr style="height: 15px;">
+<td style="width: 105.6px; height: 15px;">逸脫序列</td>
+<td style="width: 403.4px; height: 15px;">意義</td>
+</tr>
+<tr style="height: 14px;">
+<td style="width: 105.6px; height: 14px;">\\</td>
+<td style="width: 403.4px; height: 14px;">印出反斜線(\)。</td>
+</tr>
+<tr style="height: 14px;">
+<td style="width: 105.6px; height: 14px;">\'</td>
+<td style="width: 403.4px; height: 14px;"><span>印出單引號(')。</span></td>
+</tr>
+<tr style="height: 14px;">
+<td style="width: 105.6px; height: 14px;">\"</td>
+<td style="width: 403.4px; height: 14px;"><span>印出雙引號(")。</span></td>
+</tr>
+<tr style="height: 14px;">
+<td style="width: 105.6px; height: 14px;">\a</td>
+<td style="width: 403.4px; height: 14px;"><span>響鈴(Bell)。</span></td>
+</tr>
+<tr style="height: 14px;">
+<td style="width: 105.6px; height: 14px;">\b</td>
+<td style="width: 403.4px; height: 14px;"><span>倒退鍵(Backspace)。</span></td>
+</tr>
+<tr style="height: 14px;">
+<td style="width: 105.6px; height: 14px;">\f</td>
+<td style="width: 403.4px; height: 14px;"><span>換頁(Formfeed)。</span></td>
+</tr>
+<tr style="height: 14px;">
+<td style="width: 105.6px; height: 14px;">\n</td>
+<td style="width: 403.4px; height: 14px;"><span>換行(Linefeed)。</span></td>
+</tr>
+<tr style="height: 14px;">
+<td style="width: 105.6px; height: 14px;">\r</td>
+<td style="width: 403.4px; height: 14px;">歸位(Carriage Return)。</td>
+</tr>
+<tr style="height: 14px;">
+<td style="width: 105.6px; height: 14px;">\t</td>
+<td style="width: 403.4px; height: 14px;"><span>[Tab]鍵(Horizontal)。</span></td>
+</tr>
+<tr style="height: 14.3998px;">
+<td style="width: 105.6px; height: 14.3998px;">\v</td>
+<td style="width: 403.4px; height: 14.3998px;"><span>垂直定位(Vertical Tab)。</span></td>
+</tr>
+<tr style="height: 14px;">
+<td style="width: 105.6px; height: 14px;">\ooo</td>
+<td style="width: 403.4px; height: 14px;"><span>ASCII字元，ooo為八進位整數。</span></td>
+</tr>
+<tr style="height: 14px;">
+<td style="width: 105.6px; height: 14px;">\x<em><strong>hh</strong></em></td>
+<td style="width: 403.4px; height: 14px;"><span>ASCII字元，<em><strong>hh</strong></em>為十六進位整數。</span></td>
+</tr>
+<tr style="height: 14px;">
+<td style="width: 105.6px; height: 14px;">\N{<em><strong>name</strong></em>}</td>
+<td style="width: 403.4px; height: 14px;"><span>Unicode字元，<em><strong>name</strong></em>為字元名稱。</span></td>
+</tr>
+<tr style="height: 14px;">
+<td style="width: 105.6px; height: 14px;">\u<em><strong>xxxx</strong></em></td>
+<td style="width: 403.4px; height: 14px;"><span>Unicode字元，<em><strong>xxxx</strong></em>為16-bit十六進位整數。</span></td>
+</tr>
+<tr style="height: 14px;">
+<td style="width: 105.6px; height: 14px;">\U<em><strong>xxxxxxxx</strong></em></td>
+<td style="width: 403.4px; height: 14px;"><span>Unicode字元，<em><strong>xxxxxxxx</strong></em>為32-bit十六進位整數。</span></td>
+</tr>
+</tbody>
+</table>
+<br />Day11(0126) << <a href='Day11(0126).html'>Previous</a> <a href='常用內建字串函式.html'>Next</a> >> 常用內建字串函式</div>
         
     <!-- footer -->
       <div class="container">
