--- a/config/content.htm
+++ b/config/content.htm
@@ -445,6 +445,26 @@ h</pre>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&gt;&gt;&gt;s = "Python程式設計"
 &gt;&gt;&gt;s[2:4] #不包含第四字元(只索引2~3字元)
 th</pre>
-<p></p>
+<h2>Day12(0127)</h2>
+<h3>字串處理方法</h3>
+<p>1.id(X):取得X指向之物件的id編號。</p>
+<p>2.type(X):取得X之型別。</p>
+<p>3.print(X):印出X的值。</p>
+<h3>常用字串轉換方法</h3>
+<p>1.str.upper(s):傳回s的所有字元轉為大寫的字串。</p>
+<p>2.str.lower(s):<span>傳回s的所有字元轉為小寫的字串。</span></p>
+<p>3.str.replace(old,new):<span>傳回將字串參數old取代為字串參數new的字串。</span></p>
+<p>4.str.capitalize(s):<span>傳回s的第一個字元轉換為大寫的字串。</span></p>
+<p>5.str.title(s):<span>傳回s的每一個單字的第一個字元</span><span>轉換為大寫的字串。</span></p>
+<h3>常用字串測試方法</h3>
+<p>1.str.isalpha(s):若s中所有字元皆為英文字母傳回True，反之則傳回False。</p>
+<p>2.str.isdigit(s):<span>若s中所有字元皆為阿拉伯數字傳回True，反之則傳回False。</span></p>
+<p>3.str.isalnum(s):<span>若s中所有字元皆為英文字母及阿拉伯數字傳回True，反之則傳回False。</span></p>
+<p>4.str.is<span>upper(s):若s中所有字元皆為大寫英文字母傳回True，反之則傳回False。</span></p>
+<p><span>5.str.islower(s):若s中所有字元皆為小寫英文字母傳回True，反之則傳回False。</span></p>
+<h3><span>搜尋字串方法</span></h3>
+<p><span>1.str.count(s):傳回目標字串中出現s字串的次數。</span></p>
+<p><span>2.str.startswith(s):若目標字串中的開頭為s字串傳回True，反之則傳回False。</span></p>
+<p><span>3.str.endswith(s):若目標字串中的結尾為s字串傳回<span>True</span><span>，反之則傳回False。</span></span></p>
 <h1>資料參考</h1>
 <p><a href="https://developer.mozilla.org/zh-TW/docs/Learn/Getting_started_with_the_web&amp;nbsp">https://developer.mozilla.org/zh-TW/docs/Learn/Getting_started_with_the_web&amp;nbsp</a> </p>
