--- a/content/字串處理方法.html
+++ b/content/字串處理方法.html
@@ -133,15 +133,11 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">常用數學函式 << <a href='常用數學函式.html'>Previous</a> <a href='Day11(0126).html'>Next</a> >> Day11(0126)<br /><h1>亂數函式</h1>
-<p>首先匯入亂數模組。</p>
-<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&gt;&gt;&gt;import random</pre>
-<p>1.random.randint(X,Y):傳回一個大於等於X並小於等於Y的隨機整數。</p>
-<p>2.<span>random.random():傳回一個大於等於0.0並小於1.0的隨機浮點數。</span></p>
-<p><span>3.random.shuffle(X):將X中的元素進行隨機重排。</span></p>
-<p><span>利用上述函式寫出簡易猜數字的程式如下。</span></p>
-<p><span><a href="https://drive.google.com/file/d/1mG8VUXCxXKMNmqUnpQUgDG3gx7UR2B2M/view?usp=sharing">random.py</a></span></p>
-<br />常用數學函式 << <a href='常用數學函式.html'>Previous</a> <a href='Day11(0126).html'>Next</a> >> Day11(0126)</div>
+    <div id="tipue_search_content">Day12(0127) << <a href='Day12(0127).html'>Previous</a> <a href='常用字串轉換方法.html'>Next</a> >> 常用字串轉換方法<br /><h1>字串處理方法</h1>
+<p>1.id(X):取得X指向之物件的id編號。</p>
+<p>2.type(X):取得X之型別。</p>
+<p>3.print(X):印出X的值。</p>
+<br />Day12(0127) << <a href='Day12(0127).html'>Previous</a> <a href='常用字串轉換方法.html'>Next</a> >> 常用字串轉換方法</div>
         
     <!-- footer -->
       <div class="container">
