--- a/content/常用字串轉換方法.html
+++ b/content/常用字串轉換方法.html
@@ -133,15 +133,13 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">常用數學函式 << <a href='常用數學函式.html'>Previous</a> <a href='Day11(0126).html'>Next</a> >> Day11(0126)<br /><h1>亂數函式</h1>
-<p>首先匯入亂數模組。</p>
-<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&gt;&gt;&gt;import random</pre>
-<p>1.random.randint(X,Y):傳回一個大於等於X並小於等於Y的隨機整數。</p>
-<p>2.<span>random.random():傳回一個大於等於0.0並小於1.0的隨機浮點數。</span></p>
-<p><span>3.random.shuffle(X):將X中的元素進行隨機重排。</span></p>
-<p><span>利用上述函式寫出簡易猜數字的程式如下。</span></p>
-<p><span><a href="https://drive.google.com/file/d/1mG8VUXCxXKMNmqUnpQUgDG3gx7UR2B2M/view?usp=sharing">random.py</a></span></p>
-<br />常用數學函式 << <a href='常用數學函式.html'>Previous</a> <a href='Day11(0126).html'>Next</a> >> Day11(0126)</div>
+    <div id="tipue_search_content">字串處理方法 << <a href='字串處理方法.html'>Previous</a> <a href='常用字串測試方法.html'>Next</a> >> 常用字串測試方法<br /><h1>常用字串轉換方法</h1>
+<p>1.str.upper(s):傳回s的所有字元轉為大寫的字串。</p>
+<p>2.str.lower(s):<span>傳回s的所有字元轉為小寫的字串。</span></p>
+<p>3.str.replace(old,new):<span>傳回將字串參數old取代為字串參數new的字串。</span></p>
+<p>4.str.capitalize(s):<span>傳回s的第一個字元轉換為大寫的字串。</span></p>
+<p>5.str.title(s):<span>傳回s的每一個單字的第一個字元</span><span>轉換為大寫的字串。</span></p>
+<br />字串處理方法 << <a href='字串處理方法.html'>Previous</a> <a href='常用字串測試方法.html'>Next</a> >> 常用字串測試方法</div>
         
     <!-- footer -->
       <div class="container">
