Day13(0128) progress update

--- a/config/content.htm
+++ b/config/content.htm
@@ -456,15 +456,29 @@ th</pre>
 <p>3.str.replace(old,new):<span>傳回將字串參數old取代為字串參數new的字串。</span></p>
 <p>4.str.capitalize(s):<span>傳回s的第一個字元轉換為大寫的字串。</span></p>
 <p>5.str.title(s):<span>傳回s的每一個單字的第一個字元</span><span>轉換為大寫的字串。</span></p>
+<h3><span>搜尋字串方法</span></h3>
+<p><span>1.str.count(s):傳回目標字串中出現s字串的次數。</span></p>
+<p><span>2.str.startswith(s):若目標字串中的開頭為s字串傳回True，反之則傳回False。</span></p>
+<p><span>3.str.endswith(s):若目標字串中的結尾為s字串傳回<span>True</span><span>，反之則傳回False。</span></span></p>
 <h3>常用字串測試方法</h3>
 <p>1.str.isalpha(s):若s中所有字元皆為英文字母傳回True，反之則傳回False。</p>
 <p>2.str.isdigit(s):<span>若s中所有字元皆為阿拉伯數字傳回True，反之則傳回False。</span></p>
 <p>3.str.isalnum(s):<span>若s中所有字元皆為英文字母及阿拉伯數字傳回True，反之則傳回False。</span></p>
 <p>4.str.is<span>upper(s):若s中所有字元皆為大寫英文字母傳回True，反之則傳回False。</span></p>
 <p><span>5.str.islower(s):若s中所有字元皆為小寫英文字母傳回True，反之則傳回False。</span></p>
-<h3><span>搜尋字串方法</span></h3>
-<p><span>1.str.count(s):傳回目標字串中出現s字串的次數。</span></p>
-<p><span>2.str.startswith(s):若目標字串中的開頭為s字串傳回True，反之則傳回False。</span></p>
-<p><span>3.str.endswith(s):若目標字串中的結尾為s字串傳回<span>True</span><span>，反之則傳回False。</span></span></p>
+<span></span>
+<h2><span><span>Day13(0128)</span></span></h2>
+<span><span></span></span>
+<h3><span><span>字串格式化方法</span></span></h3>
+<p>1.str.center(w):傳回欄位寬度為w所指定的字元數，並且為置中的字串。</p>
+<p>2.str.ljust(w):<span>傳回欄位寬度為w所指定的字元數，並且為靠左的字串。</span></p>
+<p>3.str.rjust(w):<span>傳回欄位寬度為w所指定的字元數，並且為靠右的字串。</span></p>
+<p><span>4.str.zfill(w):傳回欄位寬度為w所指定的字元數，並且<span>左側填上0、正負號(+,-)皆保留在開頭的字串。</span></span></p>
+<p><span>5.str.format(spec):利用spec所指定的格式將字串格式化。</span></p>
+<h3><span>刪除指定字元方法</span></h3>
+<p>1.str.strip(X):從字串兩側刪除指定字元。</p>
+<p><span><span>2.str.lstrip(X):從字串左側刪除指定字元。</span></span></p>
+<p><span><span>3.str.rstrip(X):從字串右</span></span><span><span>側刪除指定字元。</span></span></p>
+<p><span><span></span></span></p>
 <h1>資料參考</h1>
 <p><a href="https://developer.mozilla.org/zh-TW/docs/Learn/Getting_started_with_the_web&amp;nbsp">https://developer.mozilla.org/zh-TW/docs/Learn/Getting_started_with_the_web&amp;nbsp</a> </p>
