--- a/content/數值與字串格式化.html
+++ b/content/數值與字串格式化.html
@@ -133,8 +133,22 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">運算子 << <a href='運算子.html'>Previous</a> <a href='運算子個別解說(一).html'>Next</a> >> 運算子個別解說(一)<br /><h1>Day5(0120)</h1>
-<br />運算子 << <a href='運算子.html'>Previous</a> <a href='運算子個別解說(一).html'>Next</a> >> 運算子個別解說(一)</div>
+    <div id="tipue_search_content">Day14(0129) << <a href='Day14(0129).html'>Previous</a> <a href='資料參考.html'>Next</a> >> 資料參考<br /><h1>數值與字串格式化</h1>
+<p>使用format()函式將數值與字串格式化，其語法如下，根據選擇性參數spec所指定的格式將參數value格式化。</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">format(value,spec)</pre>
+<p>參數spec的格式如下:</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">[[fill]align][sign][#][0][width][,][.precision][type]</pre>
+<p>1.[align]:設定對齊方式，有'&lt;'、'&gt;'、'^'、'='等值，分別表示靠左、靠右、置中、正負符號和數字之間的空位填滿0，數值預設圍靠右，其他資料預設為靠左。</p>
+<p>2.[fill]:設定填滿空位的字元。</p>
+<p>3.[sign]:設定正負符號，只在負數前加上負號、在正數前則加上一個空白，預設為'-'。</p>
+<p>4.[#]:設定在二、八、十六進位數值前加上'0b'、'0o'或'0x'。</p>
+<p>5.[0]:設定用0填滿空位。</p>
+<p>6.[width]:設定欄寬為幾字元。</p>
+<p>7.[,]:設定加上千分位符號。</p>
+<p>8.[.precision]:設定精確度為小數幾位。</p>
+<p>9.[type]:設定表示法類型，有'b'(二進位)、'c'(字元)、'd'(十進位)、'e'(科學記號)、'E'(科學記號)、'f'(小數點，預設精確度為六位)、'F'(<span>小數點)</span>、'g'(一般格式)、'G'<span>(一般格式)</span>、'n'(數值)、'o'(八進位)、's'(字串)、'x'(十六進位)、'X'<span>(十六進位)</span>、'%'(百分比)等值。</p>
+<p></p>
+<br />Day14(0129) << <a href='Day14(0129).html'>Previous</a> <a href='資料參考.html'>Next</a> >> 資料參考</div>
         
     <!-- footer -->
       <div class="container">
