--- a/content/Day14(0129).html
+++ b/content/Day14(0129).html
@@ -133,8 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">運算子 << <a href='運算子.html'>Previous</a> <a href='運算子個別解說(一).html'>Next</a> >> 運算子個別解說(一)<br /><h1>Day5(0120)</h1>
-<br />運算子 << <a href='運算子.html'>Previous</a> <a href='運算子個別解說(一).html'>Next</a> >> 運算子個別解說(一)</div>
+    <div id="tipue_search_content">刪除指定字元方法 << <a href='刪除指定字元方法.html'>Previous</a> <a href='數值與字串格式化.html'>Next</a> >> 數值與字串格式化<br /><h1>Day14(0129)</h1>
+<br />刪除指定字元方法 << <a href='刪除指定字元方法.html'>Previous</a> <a href='數值與字串格式化.html'>Next</a> >> 數值與字串格式化</div>
         
     <!-- footer -->
       <div class="container">
