--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -466,9 +466,9 @@ th</pre>
 <p>3.str.isalnum(s):<span>若s中所有字元皆為英文字母及阿拉伯數字傳回True，反之則傳回False。</span></p>
 <p>4.str.is<span>upper(s):若s中所有字元皆為大寫英文字母傳回True，反之則傳回False。</span></p>
 <p><span>5.str.islower(s):若s中所有字元皆為小寫英文字母傳回True，反之則傳回False。</span></p>
-<span></span>
+<p><span></span></p>
 <h2><span><span>Day13(0128)</span></span></h2>
-<span><span></span></span>
+<p><span><span></span></span></p>
 <h3><span><span>字串格式化方法</span></span></h3>
 <p>1.str.center(w):傳回欄位寬度為w所指定的字元數，並且為置中的字串。</p>
 <p>2.str.ljust(w):<span>傳回欄位寬度為w所指定的字元數，並且為靠左的字串。</span></p>
@@ -479,6 +479,73 @@ th</pre>
 <p>1.str.strip(X):從字串兩側刪除指定字元。</p>
 <p><span><span>2.str.lstrip(X):從字串左側刪除指定字元。</span></span></p>
 <p><span><span>3.str.rstrip(X):從字串右</span></span><span><span>側刪除指定字元。</span></span></p>
-<p><span><span></span></span></p>
+<h2>Day14(0129)</h2>
+<h3>數值與字串格式化</h3>
+<p>使用format()函式將數值與字串格式化，其語法如下，根據選擇性參數spec所指定的格式將參數value格式化。</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">format(value,spec)</pre>
+<p>參數spec的格式如下:</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">[[fill]align][sign][#][0][width][,][.precision][type]</pre>
+<p>1.[align]:設定對齊方式，有'&lt;'、'&gt;'、'^'、'='等值，分別表示靠左、靠右、置中、正負符號和數字之間的空位填滿0，數值預設圍靠右，其他資料預設為靠左。</p>
+<p>2.[fill]:設定填滿空位的字元。</p>
+<p>3.[sign]:設定正負符號，只在負數前加上負號、在正數前則加上一個空白，預設為'-'。</p>
+<p>4.[#]:設定在二、八、十六進位數值前加上'0b'、'0o'或'0x'。</p>
+<p>5.[0]:設定用0填滿空位。</p>
+<p>6.[width]:設定欄寬為幾字元。</p>
+<p>7.[,]:設定加上千分位符號。</p>
+<p>8.[.precision]:設定精確度為小數幾位。</p>
+<p>9.[type]:設定表示法類型，有'b'(二進位)、'c'(字元)、'd'(十進位)、'e'(科學記號)、'E'(科學記號)、'f'(小數點，預設精確度為六位)、'F'(<span>小數點)</span>、'g'(一般格式)、'G'<span>(一般格式)</span>、'n'(數值)、'o'(八進位)、's'(字串)、'x'(十六進位)、'X'<span>(十六進位)</span>、'%'(百分比)等值。</p>
+<h2>Day15(0130)</h2>
+<h3>認識流程控制</h3>
+<p>流程控制分成下列兩種類型。</p>
+<p>1.選擇結構:用來判斷條件式，根據結果True或False執行不同的敘述，Python支援的選擇結構為if。</p>
+<p>2.迴圈結構:用於重複執行，Python支援的迴圈函數為for與while。</p>
+<p>流程控制中將下列的值判斷為False，如下。</p>
+<p>1.None</p>
+<p>2.False</p>
+<p>3.等於0的數值</p>
+<p>4.空序列，例如:(''空字串)、([]空串列)、(()空序對)。</p>
+<p>5.空對映，例如({}空集合)。</p>
+<h3>if選擇結構</h3>
+<p>1.單向if:意義為「若...就...」，條件式condition若傳回True，就繼續執行statement(s)。語法如下:</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">if condition:
+        statement(s)</pre>
+<p>2.雙向if...else:<span>意義為「若...就...否則...」，屬於雙向選擇，若condition傳回True，執行statement1，否則執行statement2。語法如下:</span></p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">if condition:
+        statements1
+else:
+        statements2</pre>
+<p>3.多向if...elif...else:<span>意義為「若...就...否則... 若...」，屬於多向選擇，判斷condition1，若condition1傳回True就執行statement1，否則判斷condition2，若condition2傳回True就執行statement2，否則判斷condition3...依此類推，所以statement1~statementN+1中只有一組會被執行。語法如下:</span></p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">if condition1:
+        statements1
+elif condition2:
+        statements2
+elif condition3:
+        statements3
+...
+
+else:
+        statementsN+1</pre>
+<p>4.巢狀if結構:顧名思義指的是if敘述裡包含其他if敘述，且沒有深度限制，但一般還是較常使用多向if...elif...else來做使用較佳。例如:</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">num = eval(input("請您輸入1~5中的任一整數:"))
+if num ==1:
+        print("ONE")
+else:
+        if num ==2:
+                print("TWO")
+        else:
+                if num ==3:
+                        print("THREE")
+                else:
+                        if num ==4:
+                                print("FOUR")
+                        else:
+                                if num ==5:
+                                        print("FIVE")
+                                else:
+                                        print("您輸入的資料超過範圍")
+
+
+</pre>
+<p></p>
 <h1>資料參考</h1>
 <p><a href="https://developer.mozilla.org/zh-TW/docs/Learn/Getting_started_with_the_web&amp;nbsp">https://developer.mozilla.org/zh-TW/docs/Learn/Getting_started_with_the_web&amp;nbsp</a> </p>
