--- a/content/Day15(0130).html
+++ b/content/Day15(0130).html
@@ -133,11 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">連接運算子 << <a href='連接運算子.html'>Previous</a> <a href='in ,not in運算子.html'>Next</a> >> in ,not in運算子<br /><h1>重複運算子</h1>
-<p>1.*運算子可以用來重複字串，如下。</p>
-<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&gt;&gt;&gt;5 * "wow!"
-'wow!wow!wow!wow!wow!'</pre>
-<br />連接運算子 << <a href='連接運算子.html'>Previous</a> <a href='in ,not in運算子.html'>Next</a> >> in ,not in運算子</div>
+    <div id="tipue_search_content">W3 << <a href='W3.html'>Previous</a> <a href='認識流程控制.html'>Next</a> >> 認識流程控制<br /><h1>Day15(0130)</h1>
+<br />W3 << <a href='W3.html'>Previous</a> <a href='認識流程控制.html'>Next</a> >> 認識流程控制</div>
         
     <!-- footer -->
       <div class="container">
