--- a/content/認識流程控制.html
+++ b/content/認識流程控制.html
@@ -133,11 +133,17 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">連接運算子 << <a href='連接運算子.html'>Previous</a> <a href='in ,not in運算子.html'>Next</a> >> in ,not in運算子<br /><h1>重複運算子</h1>
-<p>1.*運算子可以用來重複字串，如下。</p>
-<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&gt;&gt;&gt;5 * "wow!"
-'wow!wow!wow!wow!wow!'</pre>
-<br />連接運算子 << <a href='連接運算子.html'>Previous</a> <a href='in ,not in運算子.html'>Next</a> >> in ,not in運算子</div>
+    <div id="tipue_search_content">Day15(0130) << <a href='Day15(0130).html'>Previous</a> <a href='if選擇結構.html'>Next</a> >> if選擇結構<br /><h1>認識流程控制</h1>
+<p>流程控制分成下列兩種類型。</p>
+<p>1.選擇結構:用來判斷條件式，根據結果True或False執行不同的敘述，Python支援的選擇結構為if。</p>
+<p>2.迴圈結構:用於重複執行，Python支援的迴圈函數為for與while。</p>
+<p>流程控制中將下列的值判斷為False，如下。</p>
+<p>1.None</p>
+<p>2.False</p>
+<p>3.等於0的數值</p>
+<p>4.空序列，例如:(''空字串)、([]空串列)、(()空序對)。</p>
+<p>5.空對映，例如({}空集合)。</p>
+<br />Day15(0130) << <a href='Day15(0130).html'>Previous</a> <a href='if選擇結構.html'>Next</a> >> if選擇結構</div>
         
     <!-- footer -->
       <div class="container">
