Day16(0131) progress update

--- a/config/content.htm
+++ b/config/content.htm
@@ -547,6 +547,29 @@ else:
 
 
 </pre>
+<h2>Day16(0131)</h2>
+<h3>for迴圈(for loop)</h3>
+<p>for迴圈主要用來解決重複執行的問題。例如:</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">for var in iterator:
+        statements1
+[else:
+        statements2]</pre>
+<h3>使用range物件作為迴圈迭代的物件</h3>
+<p>range語法，如下。</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">range(stop)
+range(start,stop,step)</pre>
+<p>1.stop:為終止值。</p>
+<p>2.start:為起始值。</p>
+<p>3.step:為間隔值。</p>
+<p>在for迴圈中使用range進行迭代，如下。</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">for i in range(5)
+        print(i)</pre>
+<p>上述程式結果為</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">0
+1
+2
+3
+4</pre>
 <p></p>
 <h1>資料參考</h1>
 <p><a href="https://developer.mozilla.org/zh-TW/docs/Learn/Getting_started_with_the_web&amp;nbsp">https://developer.mozilla.org/zh-TW/docs/Learn/Getting_started_with_the_web&amp;nbsp</a> </p>
