--- a/content/Day16(0131).html
+++ b/content/Day16(0131).html
@@ -133,11 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Day12(0127) << <a href='Day12(0127).html'>Previous</a> <a href='常用字串轉換方法.html'>Next</a> >> 常用字串轉換方法<br /><h1>字串處理方法</h1>
-<p>1.id(X):取得X指向之物件的id編號。</p>
-<p>2.type(X):取得X之型別。</p>
-<p>3.print(X):印出X的值。</p>
-<br />Day12(0127) << <a href='Day12(0127).html'>Previous</a> <a href='常用字串轉換方法.html'>Next</a> >> 常用字串轉換方法</div>
+    <div id="tipue_search_content">if選擇結構 << <a href='if選擇結構.html'>Previous</a> <a href='for迴圈(for loop).html'>Next</a> >> for迴圈(for loop)<br /><h1>Day16(0131)</h1>
+<br />if選擇結構 << <a href='if選擇結構.html'>Previous</a> <a href='for迴圈(for loop).html'>Next</a> >> for迴圈(for loop)</div>
         
     <!-- footer -->
       <div class="container">
