--- a/content/for迴圈(for loop).html
+++ b/content/for迴圈(for loop).html
@@ -133,11 +133,13 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Day12(0127) << <a href='Day12(0127).html'>Previous</a> <a href='常用字串轉換方法.html'>Next</a> >> 常用字串轉換方法<br /><h1>字串處理方法</h1>
-<p>1.id(X):取得X指向之物件的id編號。</p>
-<p>2.type(X):取得X之型別。</p>
-<p>3.print(X):印出X的值。</p>
-<br />Day12(0127) << <a href='Day12(0127).html'>Previous</a> <a href='常用字串轉換方法.html'>Next</a> >> 常用字串轉換方法</div>
+    <div id="tipue_search_content">Day16(0131) << <a href='Day16(0131).html'>Previous</a> <a href='使用range物件作為迴圈迭代的物件.html'>Next</a> >> 使用range物件作為迴圈迭代的物件<br /><h1>for迴圈(for loop)</h1>
+<p>for迴圈主要用來解決重複執行的問題。例如:</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">for var in iterator:
+        statements1
+[else:
+        statements2]</pre>
+<br />Day16(0131) << <a href='Day16(0131).html'>Previous</a> <a href='使用range物件作為迴圈迭代的物件.html'>Next</a> >> 使用range物件作為迴圈迭代的物件</div>
         
     <!-- footer -->
       <div class="container">
