--- a/content/使用range物件作為迴圈迭代的物件.html
+++ b/content/使用range物件作為迴圈迭代的物件.html
@@ -133,11 +133,24 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Day12(0127) << <a href='Day12(0127).html'>Previous</a> <a href='常用字串轉換方法.html'>Next</a> >> 常用字串轉換方法<br /><h1>字串處理方法</h1>
-<p>1.id(X):取得X指向之物件的id編號。</p>
-<p>2.type(X):取得X之型別。</p>
-<p>3.print(X):印出X的值。</p>
-<br />Day12(0127) << <a href='Day12(0127).html'>Previous</a> <a href='常用字串轉換方法.html'>Next</a> >> 常用字串轉換方法</div>
+    <div id="tipue_search_content">for迴圈(for loop) << <a href='for迴圈(for loop).html'>Previous</a> <a href='資料參考.html'>Next</a> >> 資料參考<br /><h1>使用range物件作為迴圈迭代的物件</h1>
+<p>range語法，如下。</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">range(stop)
+range(start,stop,step)</pre>
+<p>1.stop:為終止值。</p>
+<p>2.start:為起始值。</p>
+<p>3.step:為間隔值。</p>
+<p>在for迴圈中使用range進行迭代，如下。</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">for i in range(5)
+        print(i)</pre>
+<p>上述程式結果為</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">0
+1
+2
+3
+4</pre>
+<p></p>
+<br />for迴圈(for loop) << <a href='for迴圈(for loop).html'>Previous</a> <a href='資料參考.html'>Next</a> >> 資料參考</div>
         
     <!-- footer -->
       <div class="container">
