--- a/content/while迴圈.html
+++ b/content/while迴圈.html
@@ -133,11 +133,19 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Day1(0116) << <a href='Day1(0116).html'>Previous</a> <a href='基本Python程式.html'>Next</a> >> 基本Python程式<br /><h1>Python源起</h1>
-<p>Python是一種程式語言，起源於1990年代初期由Guido van Rossum所研發，最初的想法為傳承ABC程式語言，Guido認為ABC相當優美與強大，非專業的程式設計人員也能夠使用，而ABC程式語言當初因為非開放而導致沒有獲得廣泛的運用，於是他決定以開放策略研發Python。</p>
-<p><img alt="" height="244" src="./../images/icon-python-text-color-horz.png" width="580"/></p>
-<p><span>🔼</span>Python 英文原意為蟒蛇，也可發現LOGO由兩隻蟒蛇組成。</p>
-<br />Day1(0116) << <a href='Day1(0116).html'>Previous</a> <a href='基本Python程式.html'>Next</a> >> 基本Python程式</div>
+    <div id="tipue_search_content">Day18(0202) << <a href='Day18(0202).html'>Previous</a> <a href='資料參考.html'>Next</a> >> 資料參考<br /><h1>while迴圈</h1>
+<p>while迴圈是以條件式是否成立成立作為是否執行迴圈的根據，又稱為條件式迴圈，語法如下。</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">while condition:
+        statements1
+[else:
+        statements2]</pre>
+<p>流程在進入迴圈時會先檢查condition是否成立，若成立則執行迴圈主體statements1，然後再次跳回while檢查condition是否成立，若成立則執行statements1，<span>然後再次跳回while檢查condition是否成立，就如此週而復始，直到condition為不成立時，執行statements2，最後跳出while迴圈。</span></p>
+<br/><span></span>pass、break與continue敘述
+<p><span>pass：不做任何事情，所有的程式都將繼續。</span></p>
+<p><span>break：強制跳出 [整個] 迴圈。</span></p>
+<p><span>continue：強制跳出 [本次] 迴圈，繼續進入下一圈。</span></p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false"></pre>
+<br />Day18(0202) << <a href='Day18(0202).html'>Previous</a> <a href='資料參考.html'>Next</a> >> 資料參考</div>
         
     <!-- footer -->
       <div class="container">
