--- a/content/Day18(0202).html
+++ b/content/Day18(0202).html
@@ -133,11 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Day1(0116) << <a href='Day1(0116).html'>Previous</a> <a href='基本Python程式.html'>Next</a> >> 基本Python程式<br /><h1>Python源起</h1>
-<p>Python是一種程式語言，起源於1990年代初期由Guido van Rossum所研發，最初的想法為傳承ABC程式語言，Guido認為ABC相當優美與強大，非專業的程式設計人員也能夠使用，而ABC程式語言當初因為非開放而導致沒有獲得廣泛的運用，於是他決定以開放策略研發Python。</p>
-<p><img alt="" height="244" src="./../images/icon-python-text-color-horz.png" width="580"/></p>
-<p><span>🔼</span>Python 英文原意為蟒蛇，也可發現LOGO由兩隻蟒蛇組成。</p>
-<br />Day1(0116) << <a href='Day1(0116).html'>Previous</a> <a href='基本Python程式.html'>Next</a> >> 基本Python程式</div>
+    <div id="tipue_search_content">巢狀for迴圈 << <a href='巢狀for迴圈.html'>Previous</a> <a href='while迴圈.html'>Next</a> >> while迴圈<br /><h1>Day18(0202)</h1>
+<br />巢狀for迴圈 << <a href='巢狀for迴圈.html'>Previous</a> <a href='while迴圈.html'>Next</a> >> while迴圈</div>
         
     <!-- footer -->
       <div class="container">
