--- a/content/Day19(0203).html
+++ b/content/Day19(0203).html
@@ -133,17 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">常數 << <a href='常數.html'>Previous</a> <a href='Day5(0120).html'>Next</a> >> Day5(0120)<br /><h1>運算子</h1>
-<p>1.算術運算子(arithmetic operator):+、-、*、/、//、%、**。</p>
-<p>2.移位<span>運算子(shifting operator):&lt;&lt;、&gt;&gt;。</span></p>
-<p>3.位元<span>運算子(bitwise operator):~、&amp;、|、^。</span></p>
-<p>4.比較<span>運算子(comparison operator):&gt;、&lt;、&gt;=、&lt;=、==、!=。</span></p>
-<p>5.邏輯<span>運算子(logical operator):and、or、not。</span></p>
-<p>6.指派<span>運算子(assignment operator)=、+=、-=、*=、/=、//=、%=、**=、&lt;&lt;=、&gt;&gt;=、&amp;=、|=、^=。</span></p>
-<p>7.其他特殊符號()、[]、{}、,、:、.、;。</p>
-<p>8.單位運算子:+、-和~，此時的+、-是用來表達正負數值，只有單個運算元，採前置記法，例如:-5、+5。</p>
-<p>9.二元運算子:<span>+、-和~以外的運算子屬於二元運算子，有兩個運算元，採中置記法，例如:1.3*62、60/2.6。</span></p>
-<br />常數 << <a href='常數.html'>Previous</a> <a href='Day5(0120).html'>Next</a> >> Day5(0120)</div>
+    <div id="tipue_search_content">while迴圈 << <a href='while迴圈.html'>Previous</a> <a href='認識函式.html'>Next</a> >> 認識函式<br /><h1>Day19(0203)</h1>
+<br />while迴圈 << <a href='while迴圈.html'>Previous</a> <a href='認識函式.html'>Next</a> >> 認識函式</div>
         
     <!-- footer -->
       <div class="container">
