--- a/content/定義函式.html
+++ b/content/定義函式.html
@@ -133,17 +133,21 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">常數 << <a href='常數.html'>Previous</a> <a href='Day5(0120).html'>Next</a> >> Day5(0120)<br /><h1>運算子</h1>
-<p>1.算術運算子(arithmetic operator):+、-、*、/、//、%、**。</p>
-<p>2.移位<span>運算子(shifting operator):&lt;&lt;、&gt;&gt;。</span></p>
-<p>3.位元<span>運算子(bitwise operator):~、&amp;、|、^。</span></p>
-<p>4.比較<span>運算子(comparison operator):&gt;、&lt;、&gt;=、&lt;=、==、!=。</span></p>
-<p>5.邏輯<span>運算子(logical operator):and、or、not。</span></p>
-<p>6.指派<span>運算子(assignment operator)=、+=、-=、*=、/=、//=、%=、**=、&lt;&lt;=、&gt;&gt;=、&amp;=、|=、^=。</span></p>
-<p>7.其他特殊符號()、[]、{}、,、:、.、;。</p>
-<p>8.單位運算子:+、-和~，此時的+、-是用來表達正負數值，只有單個運算元，採前置記法，例如:-5、+5。</p>
-<p>9.二元運算子:<span>+、-和~以外的運算子屬於二元運算子，有兩個運算元，採中置記法，例如:1.3*62、60/2.6。</span></p>
-<br />常數 << <a href='常數.html'>Previous</a> <a href='Day5(0120).html'>Next</a> >> Day5(0120)</div>
+    <div id="tipue_search_content">認識函式 << <a href='認識函式.html'>Previous</a> <a href='資料參考.html'>Next</a> >> 資料參考<br /><h1>定義函式</h1>
+<p>除了先前提到的內建函式外，若要客製化的功能需要自定義函式。</p>
+<p>可以利用def關鍵字定義函式，語法如下:</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">def functionName(parameters):
+        statements
+        [return|return value]
+        [statements]</pre>
+<p>1.def:此關鍵字表示用來定義函式。</p>
+<p>2.functionName:函式名稱命名，可使用英文字母(大小寫有所區分)及底線(_)、數字及中文，但不建議使用中文命名。</p>
+<p>3.parameters:函式參數，可以有0到無數個，若無參數需保留小括號，若有參數，參數間以逗號(,)隔開，可利用參數傳遞資料給函式。</p>
+<p>4.statements:函式主體，用來執行指定動作。</p>
+<p>5.[return|return value]:若要將程式的控制權由函式內部轉至呼叫函式的地方可使用return敘述。value式函式之傳回值，若程式無傳回值return可省略。</p>
+<p></p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false"></pre>
+<br />認識函式 << <a href='認識函式.html'>Previous</a> <a href='資料參考.html'>Next</a> >> 資料參考</div>
         
     <!-- footer -->
       <div class="container">
