--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -636,7 +636,17 @@ print (result2)</pre>
 <p>3.parameters:函式參數，可以有0到無數個，若無參數需保留小括號，若有參數，參數間以逗號(,)隔開，可利用參數傳遞資料給函式。</p>
 <p>4.statements:函式主體，用來執行指定動作。</p>
 <p>5.[return|return value]:若要將程式的控制權由函式內部轉至呼叫函式的地方可使用return敘述。value式函式之傳回值，若程式無傳回值return可省略。</p>
-<p></p>
+<h2>Day20(0204)</h2>
+<h3>呼叫函式</h3>
+<p>函式定義後需呼叫才會執行，若函式有參數時，參數數量及順序需正確無誤，即使沒有參數，還是需將小括號()保留，語法如下:</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">functionName(parameters)</pre>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false"></pre>
+<h3>函式參數</h3>
+<p>參數(parameter)用來傳遞資料進入函式。</p>
+<p>1.參數傳遞方式</p>
+<p>    (1)傳值呼叫</p>
+<p>    (2)</p>
+<p>    (3)</p>
+<p></p>
 <h1>資料參考</h1>
 <p><a href="https://developer.mozilla.org/zh-TW/docs/Learn/Getting_started_with_the_web&amp;nbsp">https://developer.mozilla.org/zh-TW/docs/Learn/Getting_started_with_the_web&amp;nbsp</a> </p>
