--- a/content/呼叫函式.html
+++ b/content/呼叫函式.html
@@ -133,17 +133,11 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Python程式碼格式重點 << <a href='Python程式碼格式重點.html'>Previous</a> <a href='Day2(0117).html'>Next</a> >> Day2(0117)<br /><h1>常見程式設計錯誤(bug)</h1>
-<p>1.語法錯誤</p>
-<p>執行後會出現[SyntaxError: unexpected indent][SyntaxError: EOL while scanning string literal]錯誤</p>
-<p>2.執行期間錯誤</p>
-<p>例如以下程式</p>
-<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">X=1
-Y=0
-print(X/Y)</pre>
-<p>則是因為分母不能為零而發生[ZeroDivisionError: division by zero]錯誤</p>
-<p>3.邏輯錯誤</p>
-<br />Python程式碼格式重點 << <a href='Python程式碼格式重點.html'>Previous</a> <a href='Day2(0117).html'>Next</a> >> Day2(0117)</div>
+    <div id="tipue_search_content">Day20(0204) << <a href='Day20(0204).html'>Previous</a> <a href='函式參數.html'>Next</a> >> 函式參數<br /><h1>呼叫函式</h1>
+<p>函式定義後需呼叫才會執行，若函式有參數時，參數數量及順序需正確無誤，即使沒有參數，還是需將小括號()保留，語法如下:</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">functionName(parameters)</pre>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false"></pre>
+<br />Day20(0204) << <a href='Day20(0204).html'>Previous</a> <a href='函式參數.html'>Next</a> >> 函式參數</div>
         
     <!-- footer -->
       <div class="container">
